--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,6 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --font-family-main: 'IBM Plex mono';
+}
