--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,298 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  padding: 10px;
+  font-family: var(--font-family-main, "IBM Plex mono", sans-serif);
+  background-color: var(--bg-color, #000028);
+  background-image: var(--main-bg-image, url(../images/cover-image-dark.png));
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  block-size: 100vh;
+  min-block-size: 668px;
+}
+
+.header::before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: block;
+  border-inline-end: 1px solid var(--accent-color, #ff0070);
+  border-block-start: 1px solid var(--accent-color, #ff0070);
+  block-size: 25px;
+  inline-size: 25px;
+}
+
+.header::after {
+  content: '';
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  display: block;
+  border-inline-start: 1px solid var(--accent-color, #ff0070);
+  border-block-end: 1px solid var(--accent-color, #ff0070);
+  block-size: 25px;
+  inline-size: 25px;
+}
+
+.header__rec {
+  position: absolute;
+  top: 10px;
+  right: 38px;
+  grid-column: 1;
+  grid-row: 1;
+  justify-self: end;
+  justify-self: end;
+  align-self: center;
+  align-self: start;
+  color: var(--accent-color, #ff0070);
+  font-family: var(--font-family-main, "IBM Plex Mono");
+  font-weight: var(--font-weight-regilar, 400);
+  font-size: 18px;
+  font-style: normal;
+  line-height: 1.39;
+  text-align: center;
+}
+
+.header__rec::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  display: block;
+  width: 9px;
+  height: 9px;
+  margin-inline-start: 10px;
+  border-radius: 50%;
+  box-shadow: 0 0 4px #ff0070, 0 0 8px #ff0070;
+  background-color: var(--accent-color, #ff0070);
+  transform: translate(0, -50%);
+}
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: start;
+  margin-block-start: 65px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  list-style: none;
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  padding-inline-start: 13px;
+  padding-inline-end: 13px;
+  padding-block-start: 1.5px;
+  padding-block-end: 3.5px;
+  color: var(--accent-color,#ff0070);
+  font-family: var(--font-family-main, "IBM Plex Mono");
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 1;
+  text-transform: lowercase;
+  background-color: initial;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid rgba(255, 0, 112, 0.40);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: 1px solid var(--accent-color, #ff0070);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color, #ff0070);
+}
+
+.header__title {
+  justify-self: start;
+  align-self: flex-start;
+  padding-block-start: 7px;
+  color: #db00ff;
+  font-family: var(--font-family-main, "IBM Plex Mono", sans-serif);
+  font-weight: var(--font-weight-bold, 700);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  line-height: 0.825;
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.header__subtitle {
+  margin-block-start: 30px;
+  font-family: var(--font-family-main, "IBM Plex Mono", sans-serif);
+  font-weight: var(--font-weight-bold, 700);
+  font-size: var(--main-font-size, 18px);
+  font-style: normal;
+  line-height: 1.3;
+}
+
+.title-decor {
+  max-height: fit-content;
+  color: var(--subtitle-text-color, #000028) ;
+  background-color: var(--accent-color, #ff0070);
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 50px;
+  margin-block-end: 40px;
+  padding-block-start: 30px;
+}
+
+.main__section {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  font-family: var(--font-family-main, "IBM Plex Mono");
+  font-weight: var(--font-weight-bold, 700);
+  font-size: var(--main-font-size, 18px);
+  font-style: normal;
+  line-height: 1.3;
+}
+
+.main__title {
+  color: var(--accent-color, #ff0070);
+  font-size: var(--main-font-size, 18px);
+}
+
+.main__content__list {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.main__content__element {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  color:#000028;
+  font-family: var(--font-family-main, "IBM Plex Mono", sans-serif);
+  font-weight: var(--font-weight-bold, 700);
+  font-size: var(--main-font-size, 18px);
+  font-style: normal;
+  line-height: 1.3;
+}
+
+.main__content__element__subtitle {
+  color: #000028;
+}
+
+.main__content__element__subtitle--regular {
+  font-weight: var(--font-weight-regilar, 400);
+}
+
+.main__content__element__text {
+  color: #f1b2ce;
+  font-weight: var(--font-weight-regilar, 400);
+}
+
+.main__content__element__text-link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.main__content__element__text-link:hover {
+  border-block-end: 1px solid #f1b2ce;
+}
+
+.main__content__element__text-link:focus {
+  outline: none;
+}
+
+.main__content__element__text-link:focus-visible {
+  outline: 1px solid #f1b2ce;
+}
+
+.main__content__element__subtitle__wrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.main__section__gallery {
+  gap: 10px;
+}
+
+.main__title__gallery {
+  color:#000028;
+  font-family: var(--font-family-main, "IBM Plex Mono", sans-serif);
+  font-weight: var(--font-weight-bold, 700);
+  font-size: var(--main-font-size, 18px);
+  font-style: normal;
+  line-height: 1.3;
+}
+
+.main__gallery__list {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(5, auto);
+  gap: 4px;
+}
+
+.main__gallery__picture {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.footer {
+  position: relative;
+  display: grid;
+  block-size: 100vh;
+  min-block-size: 668px;
+}
+
+.footer__title {
+  justify-self: center;
+  align-self: center;
+  color: #db00ff;
+  font-family: var(--font-family-main, "IBM Plex Mono", sans-serif);
+  font-weight: var(--font-weight-bold, 700);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  line-height: 0.825;
+  text-shadow: 2px 2px 0 var(--accent-color, #ff0070);
+}
+
+.footer::before {
+  content: '';
+  position: absolute;
+  top: 8px;
+  right: 0;
+  display: block;
+  border-inline-end: 1px solid var(--accent-color, #ff0070);
+  border-block-start: 1px solid var(--accent-color, #ff0070);
+  block-size: 25px;
+  inline-size: 25px;
+}
+
+.footer::after {
+  content: '';
+  position: absolute;
+  bottom: 13px;
+  left: 0;
+  display: block;
+  border-inline-start: 1px solid var(--accent-color, #ff0070);
+  border-block-end: 1px solid var(--accent-color, #ff0070);
+  block-size: 25px;
+  inline-size: 25px;
 }
