--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,4 +4,11 @@
 */
 :root {
   --font-family-main: 'IBM Plex mono';
+  --font-weight-bold: 700;
+  --font-weight-regular: 400;
+  --main-bg-image: url(../images/cover-image-dark.png);
+  --main-bg-color: #000028;
+  --subtitle-text-color: #000028;
+  --accent-color: #ff0070;
+  --main-font-size: 18px;
 }
