--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,4 +11,8 @@
   --subtitle-text-color: #000028;
   --accent-color: #ff0070;
   --main-font-size: 18px;
+  --line-height-default: 1.3;
+  --brand-color: #db00ff;
+  --font-style-main: normal;
+  --font-size-title-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 }
