--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,9 +5,13 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-  
+  --brand-color: #db00ff;
+  --accent-color: #ff0070;
+  --subtitle-text-color: #000028;
+  --main-bg-color: #000028;
+  --main-bg-image: url(../images/cover-image-dark.png);
+  --main-content-element-text: ##f1b2ce;
+  --header-decor-color: #ff0070;
+  --header-menu-button-hover-color: rgba(255, 0, 112, 0.4);
+  --header-menu-button-color: #ff0070;
 }
