--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,22 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --brand-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --subtitle-text-color: #353430;
+  --main-bg-color: #fff1f7;
+  --main-bg-image: url(../images/cover-image-light.png);
+  --main-content-element-text: #353430;
+  --header-decor-color: #353430;
+  --header-menu-button-hover-color: rgba(50, 49, 45, 0.40);
+  --header-menu-button-color: #353430;
+}
+
+.theme-light .header__rec {
+  display: none;
+}
+
+.theme-light .header__rec::before {
+  display: none;
+  content: none;
 }
