remove duplicate properties

--- a/styles/light.css
+++ b/styles/light.css
@@ -11,6 +11,7 @@
   --main-bg-color: #fff1f7;
   --main-bg-image: url(../images/cover-image-light.png);
   --main-content-element-text: #353430;
+  --main-title-color: #353430;
   --header-decor-color: #353430;
   --header-menu-button-hover-color: rgba(50, 49, 45, 0.4);
   --header-menu-button-color: #353430;
