--- a/styles/dark.css
+++ b/styles/dark.css
@@ -7,8 +7,9 @@
 :root.theme-dark {
   --brand-color: #db00ff;
   --accent-color: #ff0070;
-  --subtitle-text-color: #000028;
+  --subtitle-text-color: #ff0070;
   --main-bg-color: #000028;
+  --main-title-color: #ff0070;
   --main-bg-image: url(../images/cover-image-dark.png);
   --main-content-element-text: ##f1b2ce;
   --header-decor-color: #ff0070;
