--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,9 +8,11 @@
   --font-weight-regular: 400;
   --main-bg-image: url(../images/cover-image-dark.png);
   --main-bg-color: #000028;
-  --subtitle-text-color: #000028;
+  --subtitle-text-color: #ff0070;
+  --titel-decor-color: #000028;
   --accent-color: #ff0070;
   --main-font-size: 18px;
+  --main-title-color: #ff0070;
   --line-height-default: 1.3;
   --brand-color: #db00ff;
   --main-content-element-text: #f1b2ce; 
