--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,17 +3,18 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
-:root.theme-dark {
-  --brand-color: #db00ff;
-  --accent-color: #ff0070;
-  --subtitle-text-color: #ff0070;
-  --main-bg-color: #000028;
-  --main-title-color: #ff0070;
-  --main-bg-image: url(../images/cover-image-dark.png);
-  --main-content-element-text: #f1b2ce;
-  --titel-decor-color: #000028;
-  --header-decor-color: #ff0070;
-  --header-menu-button-hover-color: rgba(255, 0, 112, 0.4);
-  --header-menu-button-color: #ff0070;
-}
+@media (prefers-color-scheme: dark) {
+    :root.theme-dark {
+    --brand-color: #db00ff;
+    --accent-color: #ff0070;
+    --subtitle-text-color: #ff0070;
+    --main-bg-color: #000028;
+    --main-title-color: #ff0070;
+    --main-bg-image: url(../images/cover-image-dark.png);
+    --main-content-element-text: #f1b2ce;
+    --titel-decor-color: #000028;
+    --header-decor-color: #ff0070;
+    --header-menu-button-hover-color: rgba(255, 0, 112, 0.4);
+    --header-menu-button-color: #ff0070;
+  }
+} 
