--- a/styles/light.css
+++ b/styles/light.css
@@ -3,26 +3,27 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
+@media (prefers-color-scheme: light) {
+  :root.theme-light {
+    --brand-color: #ffc2e6;
+    --accent-color: #ff8dcb;
+    --subtitle-text-color: #353430;
+    --main-bg-color: #fff1f7;
+    --main-bg-image: url(../images/cover-image-light.png);
+    --main-content-element-text: #353430;
+    --titel-decor-color: #353430;
+    --main-title-color: #353430;
+    --header-decor-color: #353430;
+    --header-menu-button-hover-color: rgba(50, 49, 45, 0.4);
+    --header-menu-button-color: #353430;
+  }
 
-:root.theme-light {
-  --brand-color: #ffc2e6;
-  --accent-color: #ff8dcb;
-  --subtitle-text-color: #353430;
-  --main-bg-color: #fff1f7;
-  --main-bg-image: url(../images/cover-image-light.png);
-  --main-content-element-text: #353430;
-  --titel-decor-color: #353430;
-  --main-title-color: #353430;
-  --header-decor-color: #353430;
-  --header-menu-button-hover-color: rgba(50, 49, 45, 0.4);
-  --header-menu-button-color: #353430;
-}
+  .theme-light .header__rec {
+    display: none;
+  }
 
-.theme-light .header__rec {
-  display: none;
-}
-
-.theme-light .header__rec::before {
-  content: none;
-  display: none;
+  .theme-light .header__rec::before {
+    content: none;
+    display: none;
+  }
 }
