review revision completed

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -11,7 +11,7 @@
   --main-title-color: #ff0070;
   --main-bg-image: url(../images/cover-image-dark.png);
   --main-content-element-text: #f1b2ce;
-  --titel-decor-color: #000028;
+  --title-decor-color: #000028;
   --header-decor-color: #ff0070;
   --header-menu-button-hover-color: rgba(255, 0, 112, 0.4);
   --header-menu-button-color: #ff0070;
