--- a/styles/variables.css
+++ b/styles/variables.css
@@ -9,7 +9,7 @@
   --main-bg-image: url(../images/cover-image-dark.png);
   --main-bg-color: #000028;
   --subtitle-text-color: #ff0070;
-  --titel-decor-color: #000028;
+  --title-decor-color: #000028;
   --accent-color: #ff0070;
   --main-font-size: 18px;
   --main-title-color: #ff0070;
