--- a/styles/style.css
+++ b/styles/style.css
@@ -423,7 +423,7 @@
     padding-block-start: 10px;
   }
 
-  .main__list_cols_3 {
+  .main__list_layout {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
   }
